# RemindMe

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt
docs/: README.md
remindme/: __init__.py  calendar.py  config.py  gpt.py  main.py  sms.py
remindme/parsers/: __init__.py  generic.py  scheduler.py
scripts/: app.py  test_pipeline.py  test_prompts.py
tests/parsers/: test_generic.py  test_scheduler.py
